<resources>
    <string name="app_name">牛蛙呐</string>
    <string name="activity_main_index_string">首页</string>
    <string name="activity_main_community_string">社区</string>
    <string name="activity_main_subscription_string">关注</string>
    <string name="activity_main_message_string">消息</string>
    <string name="activity_main_me_string">我的</string>
    <string name="fragment_index_top_bar_search_string">搜索感兴趣的内容</string>
    <string name="index_article_info_readcount_string">阅读</string>
    <string name="index_article_info_commentcount_string">评论</string>
    <string name="index_article_info_likecount_string">赞</string>
    <string name="me_login_click_string">点击登录</string>
    <string name="me_login_desc_string">成就你的写作梦想</string>
    <string name="me_article_string">我的文章</string>
    <string name="me_draft_string">我的草稿</string>
    <string name="me_like_string">我的点赞</string>
    <string name="me_storage_string">我的物品</string>
    <string name="me_pop_string">召唤宠物</string>
    <string name="me_coin_string">牛币</string>
    <string name="me_vip_string">会员</string>
    <string name="me_lottery_string">抽奖</string>
    <string name="me_rank_string">排行</string>
    <string name="me_user_login_title_code_string">手机验证码登录</string>
    <string name="me_user_login_title_pwd_string">账号密码登录</string>
    <string name="me_user_login_get_code_string">获取验证码</string>
    <string name="me_user_login_code_hint_string">请输入验证码</string>
    <string name="me_user_login_pwd_hint_string">请输入密码</string>
    <string name="me_user_login_account_code_hint_string">请输入手机号</string>
    <string name="me_user_login_account_pwd_hint_string">请输入手机号或邮箱</string>
    <string name="user_protocol_title_string">牛蛙呐用户协议 - 牛蛙呐</string>
    <string name="privacy_policy_title_string">隐私政策 - 牛蛙呐</string>
    <string name="user_login_problem_string">登录遇到的问题</string>
    <string name="user_login_community_login_text_string">社交帐号直接登录</string>
    <string name="user_login_mustread_popup_string">请先勾选同意后再进行登录</string>
    <string name="me_user_subscribe_string">关注</string>
    <string name="me_user_fans_string">粉丝</string>
    <string name="me_user_article_count_string">篇文章</string>
    <string name="me_user_draft_count_string">个草稿</string>
    <string name="me_user_like_count_string">点赞</string>
    <string name="me_user_nb_count_string">总资产:</string>
    <string name="me_user_look_money_string">查看</string>
    <string name="me_setting_string">设置</string>
    <string name="me_settings_logout_string">退出当前账号</string>
    <string name="index_tag_setting_title">标签管理</string>
    <string name="index_tag_setting_chosen_title">已经添加标签</string>
    <string name="index_tag_setting_chosen_tip">长按拖拽排序</string>
    <string name="index_tag_setting_edit_btn_string">编辑</string>
    <string name="index_tag_setting_finish_btn_string">完成</string>
    <string name="index_tag_setting_unchosen_title">标签推荐</string>
    <string name="index_tag_setting_unchosen_tip">点击添加标签</string>
    <string name="article_subscribe_btn_string">+ 关注</string>
    <string name="article_comment_btn_string">说点什么吧</string>
    <string name="article_col_subscribe_btn_string">+关注</string>
    <string name="article_like_unlogin_warning_string">您当前还未登录</string>
    <string name="message_title_bar_string">消息</string>
    <string name="message_interaction_string">互动消息</string>
    <string name="message_system_string">系统消息</string>
    <string name="message_other_string">其他提醒</string>
    <string name="message_nirvana_msg_string">牛信</string>
    <string name="message_new_nirvana_msg_string">新牛信</string>
    <string name="message_interaction_article_string">原文</string>
    <string name="message_interaction_comment_reply_btn_string">回复</string>
    <string name="list_end_string"><![CDATA[- o((>ω< ))o 我是有底线的 -]]></string>
    <string name="notice">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="update_error_1">发现新版本，不授予相关权限无法更新应用</string>
    <string name="download_progress">下载进度</string>
    <string name="notice_new_version">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="update_next">下次再说</string>
    <string name="apk_install_permission">"安装应用需要打开未知来源权限，请去设置中开启权限"</string>
    <string name="open_now">"立即开启"</string>
    <string name="download_fail">"下载失败"</string>
    <string name="update_forbiten">"牛蛙拿为流氓软件，禁止不更新最新版本！"</string>
    <string name="update_forbiten_1">"本次是小兔子放你一马，我是乖乖乐园的叛徒，耶耶~~~"</string>
    <string name="game_name_0">"小熊小兔一套"</string>
    <string name="game_name_1">"暴力小熊一只"</string>
    <string name="game_name_2">"帅气小熊一只"</string>
    <string name="game_name_3">"疑惑小熊一只"</string>
    <string name="game_name_4">"神经小达一只"</string>
    <string name="game_name_5">"软弱小兔一只"</string>
    <string name="game_name_6">"垃圾小兔子一只"</string>
    <string name="game_name_7">"熊兔骑一套"</string>
    <string name="game_obtain">"恭喜你获得 %s"</string>

</resources>