<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.tag.IndexTagSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <com.nirvana.blog.view.StatusBarPlaceHolder
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="@dimen/dimen_20">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/index_tag_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/index_tag_setting_chosen_title"
                            android:textSize="@dimen/text_16"
                            android:textColor="@color/black_text_color"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/dimen_20"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/index_tag_setting_chosen_tip"
                            android:textSize="@dimen/text_12"
                            android:textColor="@color/gray_text_color"
                            android:layout_toEndOf="@id/index_tag_text1"
                            android:layout_marginStart="@dimen/dimen_10"/>

                        <Button
                            android:id="@+id/index_tag_setting_edit_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="@dimen/dimen_20"
                            android:background="@drawable/index_tag_setting_edit_btn"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingHorizontal="@dimen/dimen_10"
                            android:paddingVertical="@dimen/dimen_5"
                            android:text="@string/index_tag_setting_edit_btn_string"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/text_12" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/index_tag_chosen_rv"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/mid_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="@dimen/dimen_20">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/index_tag_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/index_tag_setting_unchosen_title"
                            android:textSize="@dimen/text_16"
                            android:textColor="@color/black_text_color"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/dimen_20"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/index_tag_setting_unchosen_tip"
                            android:textSize="@dimen/text_12"
                            android:textColor="@color/gray_text_color"
                            android:layout_toEndOf="@id/index_tag_text2"
                            android:layout_marginStart="@dimen/dimen_10"/>

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/index_tag_unchosen_rv"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/index_tag_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/dimen_1"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/dimen_10"
                android:src="@drawable/ic_user_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/index_tag_setting_title"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/text_17" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>